--- a/Lab02/lab02A.ipynb
+++ b/Lab02/lab02A.ipynb
@@ -5,6 +5,7 @@
    "id": "eb420d23-ded4-4240-b185-0bb8aab65e14",
    "metadata": {},
    "source": [
+    "## Anshul A Singh - 23103072\n",
     "## Lab 02\n",
     "#### Q1.\n"
    ]
