--- a/Lab02/lab02A.ipynb
+++ b/Lab02/lab02A.ipynb
@@ -5,8 +5,9 @@
    "id": "eb420d23-ded4-4240-b185-0bb8aab65e14",
    "metadata": {},
    "source": [
-    "## Anshul A Singh - 23103072\n",
-    "## Lab 02\n",
+    "## Anshul A Singh\n",
+  "## 23103072 \n",
+    "## Lab 02 A\n",
     "#### Q1.\n"
    ]
   },
